# ChatApp

./: .clang-format  CMakeLists.txt
client/: CMakeLists.txt
client/res/: CMakeLists.txt
client/src/: client.cpp  client.hpp  logger.cpp  logger.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  namespaces.h  stdafx.hpp
lib/: CMakeLists.txt
lib/include/Networking/: defines.hpp  namespaces.h  protocol.hpp  result.hpp  stdafx.hpp
lib/src/: pch.h  protocol.cpp
lib/tests/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt
server/res/: CMakeLists.txt
server/src/: main.cpp  namespaces.h  server.cpp  server.hpp  stdafx.hpp
